# web-tracing

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/viewer/: README.md  index.js  main.js  package.json  webpack.config.js
apps/viewer/models/: DamagedHelmet.glb  cube.glb  quad.glb  triangle.glb
apps/viewer/src/: index.html  index.js  style.css  wasm-module.js  worker.js
apps/viewer/src/components/: light.js  model.js  sphere.js  triangle.js
apps/wasm-module/: Cargo.toml
apps/wasm-module/src/: camera.rs  intersections.rs  lib.rs  material.rs  sphere.rs  wasm_api.rs
apps/wasm-module/src/pathtracer/: camera.rs  hit.rs  material.rs  math.rs  mod.rs  pointlight.rs  sphere.rs  triangle.rs
apps/wasm-module/tests/: web.rs
apps/webgl-compute/: index.html  package.json  webpack.config.js
apps/webgl-compute/src/: app.js  blender_triangle.js  bunny.js  cornel_box.js  index.html  mesh.js  style.css  triangle.js
apps/webgl-compute/src/glsl/: blit.glsl  compute.glsl
apps/webgl-compute/src/glsl/includes/: camera.glsl  layout.glsl  math.glsl  mesh.glsl  ray.glsl  rng.glsl  shading.glsl  sphere.glsl  sphere_intersection.glsl  triangle_intersection.glsl  uniform.glsl
src/: lib.rs
