[package]
name = "web-tracing-server"
description = "Version native de web-tracing pour le debug et le profiling"
version = "0.1.0"
repository = "https://github.com/Fanaen/web-tracing"
edition = "2018"
license = "MIT"

[dependencies]
web-tracing = { path = "../wasm-module" }
rocket = "0.4.1"
rocket_cors = "0.5.0-beta-2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
nalgebra-glm = "0.3"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json"]

[profile.release]
debug = true
